# vitaguard_app

./: .firebaserc  .gitignore  ALERT_SYSTEM_IMPLEMENTATION.md  DEPLOYMENT_GUIDE.md  README.md  deno.json  firebase.json  firestore.rules  fix.py  import_map.json  pubspec.yaml  pyrightconfig.json  run_vitaguard_backend.bat  storage.rules  tsconfig.json
backend/: .dockerignore  .env  .env.example  Dockerfile  OPERATIONS.md  alembic.ini  docker-compose.yml  pyproject.toml  vitaguard.db
backend/.github/workflows/: test.yml
backend/alembic/: env.py
backend/alembic/versions/: 59872433a5a9_verification_and_uploads.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  logging_config.py  main.py  middleware.py
backend/app/api/: __init__.py  auth.py  chat.py  companions.py  doctors.py  facilities.py  health.py  patients.py
backend/app/models/: __init__.py  chat.py  document.py  facility.py  medical.py  user.py
backend/app/schemas/: __init__.py  auth.py  chat.py  medical.py  user.py
backend/app/services/: __init__.py  auth_service.py  chat_service.py  file_service.py  medical_service.py  user_service.py  xray_service.py
backend/deploy/systemd/: vitaguard-backend.service  vitaguard-stack.service
backend/deploy/windows/: README.md  install-backend-service.ps1  remove-backend-service.ps1
backend/scripts/: start_server.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_companion.py  test_doctors.py  test_facilities.py  test_patients.py
backend/vitaguard_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lib/: main.dart  (+2 more)
(+444 files in other folders)
